feat: creating endpoint to upload photos
